@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,11 +15,11 @@ package org.openhab.binding.dmx.internal.handler;
 import static org.openhab.binding.dmx.internal.DmxBindingConstants.*;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.IntStream;
 
+import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.dmx.internal.DmxBindingConstants.ListenerType;
 import org.openhab.binding.dmx.internal.DmxBridgeHandler;
 import org.openhab.binding.dmx.internal.DmxThingHandler;
@@ -50,9 +50,9 @@ import org.slf4j.LoggerFactory;
  *
  * @author Jan N. Klug - Initial contribution
  */
-
+@NonNullByDefault
 public class TunableWhiteThingHandler extends DmxThingHandler {
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_TUNABLEWHITE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_TUNABLEWHITE);
 
     private final Logger logger = LoggerFactory.getLogger(TunableWhiteThingHandler.class);
 
@@ -81,16 +81,16 @@ public class TunableWhiteThingHandler extends DmxThingHandler {
         switch (channelUID.getId()) {
             case CHANNEL_BRIGHTNESS: {
                 if (command instanceof PercentType || command instanceof DecimalType) {
-                    PercentType brightness = (command instanceof PercentType) ? (PercentType) command
+                    PercentType brightness = (command instanceof PercentType percentCommand) ? percentCommand
                             : Util.toPercentValue(((DecimalType) command).intValue());
                     logger.trace("adding fade to channels in thing {}", this.thing.getUID());
                     targetValueSet.addValue(Util.toDmxValue(
                             Util.toDmxValue(brightness) * (100 - currentColorTemperature.intValue()) / 100));
                     targetValueSet.addValue(
                             Util.toDmxValue(Util.toDmxValue(brightness) * currentColorTemperature.intValue() / 100));
-                } else if (command instanceof OnOffType) {
+                } else if (command instanceof OnOffType onOffCommand) {
                     logger.trace("adding {} fade to channels in thing {}", command, this.thing.getUID());
-                    if (((OnOffType) command) == OnOffType.ON) {
+                    if (onOffCommand == OnOffType.ON) {
                         targetValueSet = turnOnValue;
                     } else {
                         if (dynamicTurnOnValue) {
@@ -102,16 +102,15 @@ public class TunableWhiteThingHandler extends DmxThingHandler {
                         }
                         targetValueSet = turnOffValue;
                     }
-                } else if (command instanceof IncreaseDecreaseType) {
-                    if (isDimming && ((IncreaseDecreaseType) command).equals(IncreaseDecreaseType.INCREASE)) {
+                } else if (command instanceof IncreaseDecreaseType increaseDecreaseCommand) {
+                    if (isDimming && increaseDecreaseCommand.equals(IncreaseDecreaseType.INCREASE)) {
                         logger.trace("stopping fade in thing {}", this.thing.getUID());
                         channels.forEach(DmxChannel::clearAction);
                         isDimming = false;
                         return;
                     } else {
                         logger.trace("starting {} fade in thing {}", command, this.thing.getUID());
-                        targetValueSet = ((IncreaseDecreaseType) command).equals(IncreaseDecreaseType.INCREASE)
-                                ? turnOnValue
+                        targetValueSet = increaseDecreaseCommand.equals(IncreaseDecreaseType.INCREASE) ? turnOnValue
                                 : turnOffValue;
                         targetValueSet.setFadeTime(dimTime);
                         isDimming = true;
@@ -153,8 +152,7 @@ public class TunableWhiteThingHandler extends DmxThingHandler {
                     return;
                 }
             case CHANNEL_COLOR_TEMPERATURE: {
-                if (command instanceof PercentType) {
-                    PercentType colorTemperature = (PercentType) command;
+                if (command instanceof PercentType colorTemperature) {
                     targetValueSet.addValue(Util.toDmxValue(
                             Util.toDmxValue(currentBrightness) * (100 - colorTemperature.intValue()) / 100));
                     targetValueSet.addValue(
@@ -231,7 +229,7 @@ public class TunableWhiteThingHandler extends DmxThingHandler {
         dimTime = configuration.dimtime;
         logger.trace("setting dimTime to {} ms in {}", fadeTime, this.thing.getUID());
 
-        String turnOnValueString = String.valueOf(fadeTime) + ":" + configuration.turnonvalue + ":-1";
+        String turnOnValueString = fadeTime + ":" + configuration.turnonvalue + ":-1";
         ValueSet turnOnValue = ValueSet.fromString(turnOnValueString);
         if (turnOnValue.size() % 2 == 0) {
             this.turnOnValue = turnOnValue;
@@ -245,7 +243,7 @@ public class TunableWhiteThingHandler extends DmxThingHandler {
 
         dynamicTurnOnValue = configuration.dynamicturnonvalue;
 
-        String turnOffValueString = String.valueOf(fadeTime) + ":" + configuration.turnoffvalue + ":-1";
+        String turnOffValueString = fadeTime + ":" + configuration.turnoffvalue + ":-1";
         ValueSet turnOffValue = ValueSet.fromString(turnOffValueString);
         if (turnOffValue.size() % 2 == 0) {
             this.turnOffValue = turnOffValue;
