@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import static org.openhab.binding.verisure.internal.VerisureBindingConstants.*;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
@@ -51,7 +50,7 @@ import org.openhab.core.types.UnDefType;
 @NonNullByDefault
 public class VerisureSmartLockThingHandler extends VerisureThingHandler<VerisureSmartLocksDTO> {
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_SMARTLOCK);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_SMARTLOCK);
 
     private static final int REFRESH_DELAY_SECONDS = 10;
 
@@ -140,7 +139,7 @@ public class VerisureSmartLockThingHandler extends VerisureThingHandler<Verisure
         if (session != null) {
             int httpResultCode = session.sendCommand(url, data, installationId);
             if (httpResultCode == HttpStatus.OK_200) {
-                logger.debug("AutoRelock sucessfully changed to {}", command.toString());
+                logger.debug("AutoRelock successfully changed to {}", command.toString());
             } else {
                 logger.warn("Failed to send command, HTTP result code {}", httpResultCode);
             }
@@ -223,7 +222,7 @@ public class VerisureSmartLockThingHandler extends VerisureThingHandler<Verisure
                             logger.debug("Trying to set SmartLock volume with URL {} and data {}", url, data);
                             int httpResultCode = session.sendCommand(url, data, installationId);
                             if (httpResultCode == HttpStatus.OK_200) {
-                                logger.debug("SmartLock volume sucessfully changed!");
+                                logger.debug("SmartLock volume successfully changed!");
                             } else {
                                 logger.warn("Failed to send command, HTTP result code {}", httpResultCode);
                             }
@@ -255,7 +254,7 @@ public class VerisureSmartLockThingHandler extends VerisureThingHandler<Verisure
             VerisureSmartLockDTO smartLockJSON = smartLocksJSON.getSmartLockJSON();
             if (smartLockStatus != null) {
                 getThing().getChannels().stream().map(Channel::getUID)
-                        .filter(channelUID -> isLinked(channelUID) && !channelUID.getId().equals("timestamp"))
+                        .filter(channelUID -> isLinked(channelUID) && !"timestamp".equals(channelUID.getId()))
                         .forEach(channelUID -> {
                             State state = getValue(channelUID.getId(), doorlock, smartLockStatus, smartLockJSON);
                             updateState(channelUID, state);
