@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -23,16 +23,17 @@ import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 
 import javax.servlet.ServletException;
-import javax.ws.rs.client.ClientBuilder;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.core.binding.BindingInfoRegistry;
+import org.eclipse.jetty.client.HttpClient;
+import org.openhab.core.addon.AddonInfoRegistry;
 import org.openhab.core.config.core.ConfigurableService;
 import org.openhab.core.events.Event;
 import org.openhab.core.events.EventFilter;
 import org.openhab.core.events.EventPublisher;
 import org.openhab.core.events.EventSubscriber;
+import org.openhab.core.io.net.http.HttpClientFactory;
 import org.openhab.core.io.transport.mdns.MDNSClient;
 import org.openhab.core.items.ItemRegistry;
 import org.openhab.core.items.events.ItemStateChangedEvent;
@@ -87,7 +88,7 @@ public class NeeoService implements EventSubscriber, NetworkAddressChangeListene
     // The following services are set by openHAB via the getter/setters
     private final HttpService httpService;
     private final ItemRegistry itemRegistry;
-    private final BindingInfoRegistry bindingInfoRegistry;
+    private final AddonInfoRegistry bindingInfoRegistry;
     private final ThingRegistry thingRegistry;
     private final ThingTypeRegistry thingTypeRegistry;
     private final ItemChannelLinkRegistry itemChannelLinkRegistry;
@@ -95,7 +96,8 @@ public class NeeoService implements EventSubscriber, NetworkAddressChangeListene
     private final MDNSClient mdnsClient;
     private final EventPublisher eventPublisher;
     private final NetworkAddressService networkAddressService;
-    private final ClientBuilder clientBuilder;
+    private final HttpClientFactory httpClientFactory;
+    private final HttpClient httpClient;
 
     /** The main dashboard servlet. Only created in the activate method (and disposed of in the deactivate method) */
     private @Nullable NeeoDashboardServlet dashboardServlet;
@@ -140,13 +142,13 @@ public class NeeoService implements EventSubscriber, NetworkAddressChangeListene
     @Activate
     public NeeoService(ComponentContext componentContext, @Reference HttpService httpService,
             @Reference ItemRegistry itemRegistry, @Reference ThingRegistry thingRegistry,
-            @Reference BindingInfoRegistry bindingInfoRegistry, @Reference ChannelTypeRegistry channelTypeRegistry,
+            @Reference AddonInfoRegistry addonInfoRegistry, @Reference ChannelTypeRegistry channelTypeRegistry,
             @Reference ThingTypeRegistry thingTypeRegistry, @Reference ItemChannelLinkRegistry itemChannelLinkRegistry,
             @Reference MDNSClient mdnsClient, @Reference EventPublisher eventPublisher,
-            @Reference NetworkAddressService networkAddressService, @Reference ClientBuilder clientBuilder) {
+            @Reference NetworkAddressService networkAddressService, @Reference HttpClientFactory httpClientFactory) {
         this.httpService = httpService;
         this.itemRegistry = itemRegistry;
-        this.bindingInfoRegistry = bindingInfoRegistry;
+        this.bindingInfoRegistry = addonInfoRegistry;
         this.channelTypeRegistry = channelTypeRegistry;
         this.thingRegistry = thingRegistry;
         this.thingTypeRegistry = thingTypeRegistry;
@@ -154,18 +156,19 @@ public class NeeoService implements EventSubscriber, NetworkAddressChangeListene
         this.mdnsClient = mdnsClient;
         this.eventPublisher = eventPublisher;
         this.networkAddressService = networkAddressService;
-        this.clientBuilder = clientBuilder;
+        this.httpClientFactory = httpClientFactory;
+        this.httpClient = httpClientFactory.getCommonHttpClient();
 
         logger.debug("Neeo Service activated");
         final ServiceContext localContext = new ServiceContext(componentContext, validate(httpService, "httpService"),
-                validate(itemRegistry, "itemRegistry"), validate(bindingInfoRegistry, "bindingInfoRegistry"),
+                validate(itemRegistry, "itemRegistry"), validate(addonInfoRegistry, "addonInfoRegistry"),
                 validate(thingRegistry, "thingRegistry"), validate(thingTypeRegistry, "thingTypeRegistry"),
                 validate(itemChannelLinkRegistry, "itemChannelLinkRegistry"),
                 validate(channelTypeRegistry, "channelTypeRegistry"), validate(mdnsClient, "mdnsClient"),
                 validate(eventPublisher, "eventPublisher"), validate(networkAddressService, "networkAddressService"));
 
         context = localContext;
-        discovery = new MdnsBrainDiscovery(localContext, clientBuilder);
+        discovery = new MdnsBrainDiscovery(localContext, httpClient);
         discovery.addListener(discoveryListener);
 
         try {
@@ -279,10 +282,13 @@ public class NeeoService implements EventSubscriber, NetworkAddressChangeListene
                         servletUrl);
                 try {
                     final NeeoBrainServlet newServlet = NeeoBrainServlet.create(localContext, servletUrl,
-                            sysInfo.getHostname(), ipAddress, clientBuilder);
+                            sysInfo.getHostname(), ipAddress, httpClient, httpClientFactory);
                     servlets.add(newServlet);
 
-                    localContext.getHttpService().registerServlet(servletUrl, newServlet, new Hashtable<>(),
+                    Hashtable<Object, Object> initParams = new Hashtable<>();
+                    initParams.put("servlet-name", servletUrl);
+
+                    localContext.getHttpService().registerServlet(servletUrl, newServlet, initParams,
                             localContext.getHttpService().createDefaultHttpContext());
                     logger.debug("Started NEEO Listener at {}", servletUrl);
                 } catch (NamespaceException | ServletException | IOException e) {
@@ -404,7 +410,7 @@ public class NeeoService implements EventSubscriber, NetworkAddressChangeListene
      */
     @Override
     public Set<String> getSubscribedEventTypes() {
-        return Collections.singleton(ItemStateChangedEvent.TYPE);
+        return Set.of(ItemStateChangedEvent.TYPE);
     }
 
     @Override
